...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading_tv"
            app:visibleGone="@{!isLoading}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_equipment_stack_button"
            style="?attr/floatingActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
...
